--- a/index.html
+++ b/index.html
@@ -3,19 +3,39 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<title>Disney Rebuild</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<!-- NAVBAR -->
 	<section class="navbar">
-		<div class="navbarItems active container">
+		<div class="navbarItems container">
 			<a href=""><img src="images/disneyLogo.svg"></a>
 			<div class="navButtons">
 				<button class="signUp">Sign Up Now</button>
 				<button class="logIn">Log In</button>
 			</div>
 		</div>
+
+		<!-- SHOWCASE -->
+		<div class="showcase"> 
+			<div class="showcaseItems">
+				<img src="images/all3Logos.svg">
+				<button class="showcaseBtn">Get the disney bundle</button>
+				<p>Stream now. <a href="">Terms Apply</a></p>
+				<img src="images/5showcaseLogos.png">
+				<a href="">Sign up for Disney+ only</a>
+			</div>
+
+			<div class="downArrow">
+				<a href=""><i class="fa-solid fa-angle-down"></i></a>
+			</div>
+		</div>
+
 	</section>
+
+
 
 	<script type="text/javascript" src="main.js"></script>
 </body>
