Added under showcase section and movie section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<!-- NAVBAR -->
 	<section class="navbar">
-		<div class="navbarItems container">
+		<div class="navbarItems">
 			<a href=""><img src="images/disneyLogo.svg"></a>
 			<div class="navButtons">
 				<button class="signUp">Sign Up Now</button>
@@ -29,10 +29,46 @@
 			</div>
 
 			<div class="downArrow">
-				<a href=""><i class="fa-solid fa-angle-down"></i></a>
+				<a href="#underShowcase"><i class="fa-solid fa-angle-down"></i></a>
 			</div>
 		</div>
+	</section>
 
+	<!-- UNDER SHOWCASE -->
+
+	<section id="underShowcase">
+		<div class="underShowcaseContainer grid">
+			<img src="images/watchImgBundle.png">
+			<div class="underShowcaseItems">
+				<ul class="underShowcaseList">
+					<h1>Watch the way you want</h1>
+					<li>Host virtual movie night with GroupWatch. Pause, rewind and react with up to six friends. Subscription is required to join GroupWatch</li>
+					<li>Download any movie or series and watch on-the-go.</li>
+					<li>Enjoy an ever-growing range of titles in stunning 4K UHD and Dolby Atmos sound on compatible devices.</li>
+					<li>Stream on up to four devices at the same time</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+
+
+
+	<!-- MOVIES BUNDLE -->
+
+	<section id="movies">
+		<h1>Disney+ has your favorite stories</h1>
+		<p>An unprecedented collection of the world's most beloved movies and TV series</p>
+		<div class="movieContainer grid-3"> 
+			<img src="images/hawkeye.jpeg">
+			<img src="images/encanto.png">
+			<img src="images/eternals.png">
+			<img src="images/bobaFett.png">
+			<img src="images/theBeatles.jpeg">
+			<img src="images/theSimpsons.png">
+			<img src="images/Rava.jpeg">
+			<img src="images/soul.jpeg">
+			<img src="images/welcomeToEarth.jpeg">
+		</div>
 	</section>
 
 
