Added Faq and devices

--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+
+
 	<!-- NAVBAR -->
+
+
 	<section class="navbar">
 		<div class="navbarItems">
 			<a href=""><img src="images/disneyLogo.svg"></a>
@@ -18,7 +22,10 @@
 			</div>
 		</div>
 
+
 		<!-- SHOWCASE -->
+
+
 		<div class="showcase"> 
 			<div class="showcaseItems">
 				<img src="images/all3Logos.svg">
@@ -34,7 +41,9 @@
 		</div>
 	</section>
 
+
 	<!-- UNDER SHOWCASE -->
+
 
 	<section id="underShowcase">
 		<div class="underShowcaseContainer grid">
@@ -54,6 +63,7 @@
 
 
 	<!-- MOVIES BUNDLE -->
+
 
 	<section id="movies">
 		<h1>Disney+ has your favorite stories</h1>
@@ -82,6 +92,189 @@
 					<button>Sign up Now</button>
 				</div>
 			</div>
+		</div>
+	</section>
+
+
+	<!-- DEVICES -->
+
+
+	<section class="devices">
+		<h1>Available on your favorite devices</h1>
+		<div class="devicesItems grid-4">
+			<div class="device">
+				<img src="images/tv.png">
+				<h2>TV</h2>
+				<p>Amazon Fire TV</p>
+				<p>Android TV devices</p>
+				<p>AppleTV</p>
+				<p>Chromecast</p>
+				<p>LG TV</p>
+				<p>Roku</p>
+				<p>Samsung</p>
+				<p>Xfinity X1 & Flex</p>
+			</div>
+			<div class="device">
+				<img src="images/computer.png">
+				<h2>Computer</h2>
+				<p>Chrome OS</p>
+				<p>MacOS</p>
+				<p>Windows PC</p>
+			</div>
+			<div class="device">
+				<img src="images/tablet.png">
+				<h2>Mobile & Tablelt</h2>
+				<p>Amazon Fire Tablets</p>
+				<p>Android Phones & Tablets</p>
+				<p>iPhone and iPad</p>
+			</div>
+			<div class="device">
+				<img src="images/controller.png" alt="">
+				<h2>Game Consoles</h2>
+				<p>PS4</p>
+				<p>PS5</p>
+				<p>Xbox One</p>
+				<p>Xbox Series X</p>
+				<p>Xbox Series S</p>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- FAQ -->
+
+
+	<section class="faq">
+		<h1>Frequently Asked Questions</h1>
+		<div class="faqItems">
+			<div class="faqItem">
+				<div class="faqItemHeader">
+					<h3>What is Disney+?</h3>
+				</div>
+				<div class="content item1">
+					<p>Disney+ is the streaming home of 
+					disney, Pixar, Marvel, Star Wars, National Geographic, 
+					and more. From new releases to your favorite classics
+					and exclusive Originals, there's something for everyone, all ad free
+					</p>
+				</div>
+			</div>
+			<div class="faqItem">
+				<div class="faqItemHeader">
+					<h3>What can I watch on Disney+?</h3>
+				</div>
+				<div class="content item2">
+					<p>With Disney+, you can shoose from an
+					always-growing collection of stories.
+					</p>
+					<ul>
+						<li>New releases and timeless classics</li>
+						<li>Exclusive new Original Movies and Series</li>
+						<li>Exciting specials and limited-time streaming events</li>
+						<li>Nostalgic throwbacks and past seasons of your favorite shows</li>
+						<li>The entire Skywalker Saga and much of the Marvel Cinematic Universe</li>
+						<li>Beloved and experimental shorts</li>
+						<li>Documentaries, unscripted series, and so much more</li>
+					</ul>
+				</div>
+			</div>
+			<div class="faqItem">
+				<div class="faqItemHeader">
+					<h3>Where can I watch Disney+?</h3>
+				</div>
+				<div class="content item3">
+					<p>The Disney+ app is available on mobile
+					devices, web browsers, game consoles, set-top boxes,
+					and smart TVs. For a complete list of supported 
+					devices, click <a href="">here</a>. 
+					</p>
+				</div>
+			</div>
+			<div class="faqItem">
+				<div class="faqItemHeader">
+					<h3>How much does Disney+ cost?</h3>
+				</div>
+				<div class="content item4">
+					<p>Access unlimited entertainment with
+					Disney+ for $7.99/month or $79.99/year.
+					</p>
+				</div>
+			</div>
+			<div class="faqItem">
+				<div class="faqItemHeader">
+					<h3>What's included with Disney+?</h3>
+				</div>
+				<div class="content item5">
+					<p>With Disney+, you get: </p>
+					<ul>
+						<li>A premium ad-free experience</li>
+						<li>Unlimited downloads on up to 10 devices</li>
+						<li>Over 100 titles in 4K UHD and HDR</li>
+						<li>Theh ability to watch on four screens at once at no extra costs</li>
+					</ul>
+				</div>
+			</div>
+			<div class="faqItem">
+				<div class="faqItemHeader">
+					<h3>What is The Disney Bundle?</h3>
+				</div>
+				<div class="content item6">
+					<p>The Disney Bundle includes Disney+, ESPN+, 
+						and the Hulu plan that fits you best for a 
+						discounted price. You can save 25%, compared 
+						to the monthly cost of subscribing to all 3 
+						services separately! Choose between The Disney 
+						Bundle with Hulu (ad-supported) for $13.99/month
+						 or with Hulu (No Ads) for $19.99/month. <a href="">Learn More.</a>
+					</p>
+					<p>
+						With Disney+, you get new releases, classics, 
+						series, and Originals from the creators at Disney,
+						 Pixar, Marvel, Star Wars, and Nat Geo.
+					</p>
+					<p>
+						With Hulu, you can enjoy over 80,000 episodes
+						 of every kind of TV, including hit series, 
+						 breakthrough Hulu Originals, and kids TV.
+					</p>
+					<p>
+						And with ESPN+, you can stream thousands of events,
+						 top Originals, the complete 30 for 30 library, 
+						 and more.
+					</p>
+					<p>
+					<a href="">Get all three</a> and start streaming now!
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- FOOTER -->
+
+
+	<section class="footer"> 
+		<div class="footerContainer">
+			<img src="images/disneyLogo.svg" alt="">
+			<div class="upperText">
+				<p>Subscriber Agreement</p>
+				<p>Privacy Policy</p>
+				<p>Your California Privacy Rights</p>
+				<p>Do Not Sell My Personal Information</p>
+				<p>Children's Online Privacy Policy</p>
+			</div>
+			<div class="middleText">
+				<p>Closed Captioning</p>
+				<p>Interest-Based Ads</p>
+				<p>Supported Devices</p>
+				<p>Help</p>
+				<p>Gift Disney+</p>
+				<p>About Us</p>
+				<p>Disney+ Partner Program</p>
+				<p>The Disney Bundle</p>
+			</div>
+			<p>&copy; Disney. All Right Reserved.</p>
 		</div>
 	</section>
 
